z-index fix

--- a/apps/wsdjs_web/assets/css/search.css
+++ b/apps/wsdjs_web/assets/css/search.css
@@ -11,6 +11,7 @@
   pointer-events: none;
   position: relative;
   margin-right: auto;
+  z-index: 1500;
 }
 
 .search-container.focused {
